--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <hr style="border-bottom:2px ridge black;">
     </p>
  <div style="background-color:lightgoldenrodyellow;height:120px; text-align: center; font-size: 1.4rem; width:100%;"><br>
-       <Section style="text-align: left; color: brown;"> Projects = <a href="../wildlife.html" style="text-decoration: none;" target="_blank">Assignment~2</a></Section>
+       <Section style="text-align: left; color: brown;"> Projects = <a href="../assignment~2.html" style="text-decoration: none;" target="_blank">Assignment~2</a></Section>
         
         &copy Arshdeep Singh Saini &nbsp;&nbsp; 301435431&nbsp;&nbsp; COMP213&nbsp;&nbsp; First Semester(Winter 2024)</div> 
       
