--- a/assigment~2.html
+++ b/assigment~2.html
@@ -8,7 +8,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>wildlife </title>
-</head>
 <style>
 html{
     scroll-behavior: smooth;
@@ -31,14 +30,15 @@ ul{
         color:red;
     }
 </style>
+</head>
 <body>
     <header>
       <div> 
         <div style="position: relative;top: -31px;left: -2%;">
-   <img src="https://img.freepik.com/premium-vector/deer-silhouette-sunset-logo-design-inspiration_707267-296.jpg?w=740" alt="wildlife logo" height="4%" width="11%">
+   <img src="https://img.freepik.com/premium-vector/deer-silhouette-sunset-logo-design-inspiration_707267-296.jpg?w=740" alt="wildlife logo" height="4" width="11">
 </div>
    <div class="title" style="position: relative; top: -182px;
-   left: 136px; background-color:rgba(32, 32, 32,0.5);  height:100px; width:93%; padding-top: 0.4rem; color:whitesmoke; text-shadow: whitesmoke 3px; text-transform: capitalize; font-size: 25px;  text-align:center ;">     
+   left: 136px; background-color:rgba(32, 32, 32,0.5);  height:100px; width:93%; padding-top: 0.4rem; color:whitesmoke; text-transform: capitalize; font-size: 25px;  text-align:center ;">     
    <h2>  
     Websites About Protected Area Isuues </h2>
    </div>
@@ -51,13 +51,12 @@ ul{
    <li><a href="../index.html" target="_blank" style=" text-decoration: none;">Home</a></li>   
     <li><a href="https://www.earth.com/video-category/environment/" style="text-decoration: none;" target="_blank">Videos</a></li>     
     <li><a href="../Assignment-1_files/" target="_blank" style=" text-decoration: none;">Images</a></li> 
-</li><a href="https://www.nationalgeographic.com/environment" target="_blank"style="text-decoration: none;">News</a></li>
-<li><a href="#aboutus"style="text-decoration: none;">About us</a></li>
-<li><a href="https://www.nationalgeographic.com/environment/article/canadian-arctic-reserves-to-benefit-wildlife-inuit"style=" text-decoration: none;" target="_blank">NatGeo</a></li>     
+<li><a href="https://www.nationalgeographic.com/environment" target="_blank" style="text-decoration: none;">News</a></li>
+<li><a href="#aboutus" style="text-decoration: none;">About us</a></li>
+<li><a href="https://www.nationalgeographic.com/environment/article/canadian-arctic-reserves-to-benefit-wildlife-inuit" style=" text-decoration: none;" target="_blank">NatGeo</a></li>     
 </ul>
 </nav>
-
-
+</div>
 </header>
 <main style="position: relative; top: -522px; left: 137px; background-color:rgba(32, 32, 32,0.1); width:92%; height:796px; padding:2px 7px;">
     <p style="font-size: large;width:fit-content;"  ><span style="font-family: 'Verdana'; color:brown; font-size: larger; font-weight: bolder;text-transform: uppercase; text-decoration: underline; padding-left: 0.6em; ">What are protective areas?</span>
@@ -69,22 +68,21 @@ ul{
 <hr style=" border: 1px groove black;">
 <div class="image">
     <span style="font-family: 'Verdana'; color:brown; font-size:22px; font-weight: bolder;text-transform: uppercase; text-decoration: underline; padding-left:0.5rem; position: relative; top: 5px;left: -50%;">Why are protected areas important?</span>
-    <summary style="float:left; position:relative; top:45px; left:10px; width:50%;line-height:2rem;font-size: large;">
+    <section style="float:left; position:relative; top:45px; left:10px; width:50%;line-height:2rem;font-size: large;">
         All around the world, protected areas serve a variety of purposes. In addition to providing crucial ecosystem services like preserving soils and watersheds and safeguarding human populations from natural disasters, they are crucial for maintaining biodiversity. Local communities place great importance on several protected sites. These locations uplift human spirits and stimulate the senses, giving them a sense of calm in a busy world. Important cultural values are embodied in protected landscapes, some showing examples of sustainable land use. Their significance extends to research and education, and they substantially contribute to the local and regional economy, mostly through tourism and recreation.
-    </summary>
+    </section>
     <img src="https://cff2.earth.com/uploads/2022/05/02091739/Biodiversity5-960x640.jpg" alt="bear image" style="float: right; width:35%; height:370px; position: relative; top:-20px; right:15px; border-radius: 50%;">
 </div>
-</p>
 </main>
 
 <footer  style="background-color: beige; width:102%; height:280px; position: relative; top:-32rem; text-align: center; ">
-<div class="copyright" style="display: flex; line-height: 2rem; font-size: large; column-gap: 10%;  padding-left:6rem;"id="aboutus" >
+<div class="copyright" style="display: flex; line-height: 2rem; font-size: large; column-gap: 10%;  padding-left:6rem;" id="aboutus" >
  <ul>
 <li style="color:brown; font-size: larger; font-weight: bolder;">References</li>
 <li><a href="https://www.nationalgeographic.com/environment/article/canadian-arctic-reserves-to-benefit-wildlife-inuit" target="_blank"> Nat geographic</a></li>
 <li><a href="https://www.iucn.org/our-work/protected-areas-and-land-use" target="_blank">IUCN</a></li>
 <li><a href="https://www.earth.com/news/climate-change-impacts-biodiversity-in-protected-areas-worldwide/" target="_blank">earth.com</a></li>
-<li><a href="https://novascotia.ca/nse/protectedareas/definition.asp#:~:text=Protected%20Areas,-About%20Protected%20Areas&text=The%20International%20Union%20for%20Conservation,long%20term%20conservation%20of%20nature."target="_blank" >environmental change</a></li>
+<li><a href="https://novascotia.ca/nse/protectedareas/definition.asp#:~:text=Protected%20Areas,-About%20Protected%20Areas&text=The%20International%20Union%20for%20Conservation,long%20term%20conservation%20of%20nature." target= "_blank" >environmental change</a></li>
 </ul>
 <ul>
     <li style="color:brown; font-size: larger; font-weight: bolder;">Images</li>
@@ -101,18 +99,18 @@ ul{
 </ul>
 <ul>
     <li style="color:brown; font-size: larger; font-weight: bolder;">Follow Us</li>
-    <li><a href="https://www.facebook.com" target="_blank"><img src="https://www.vectorlogo.zone/logos/facebook/facebook-tile.svg" alt="facebook" width="22px" height="20px">&nbsp; facebook</a></li>
+    <li><a href="https://www.facebook.com" target="_blank"><img src="https://www.vectorlogo.zone/logos/facebook/facebook-tile.svg" alt="facebook" width="22" height="20">&nbsp; facebook</a></li>
     <li>
-        <a href="https://www.twitter.com" target="_blank"><img src="https://www.vectorlogo.zone/logos/twitter/twitter-tile.svg" alt="twitter" height="20px" width="20px">&nbsp; twitter</a>
+        <a href="https://www.twitter.com" target="_blank"><img src="https://www.vectorlogo.zone/logos/twitter/twitter-tile.svg" alt="twitter" height="20" width="20">&nbsp; twitter</a>
     </li>
     <li>
-        <a href="https://www.instagram.com" target="_blank"><img src="https://www.vectorlogo.zone/logos/instagram/instagram-icon.svg" alt="instagram" height="20px" width="20px" >&nbsp; instagram</a>
+        <a href="https://www.instagram.com" target="_blank"><img src="https://www.vectorlogo.zone/logos/instagram/instagram-icon.svg" alt="instagram" height="20" width="20" >&nbsp; instagram</a>
     </li>
     
 </ul>
 </div>
 <hr style="border: 1px ridge black;">
-<section style="font-size: larger;color:grey;"> Copyright &copy 2024 by Arshdeep Singh Saini &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 301435431   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Assignment-2 </section>
+<section style="font-size: larger;color:grey;"> Copyright &copy; 2024 by Arshdeep Singh Saini &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 301435431   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Assignment-2 </section>
 
 </footer>
 
