--- a/assigment-5/assignment-5.html
+++ b/assigment-5/assignment-5.html
@@ -299,6 +299,9 @@ As one of the top real estate agent is Toronto, CA, I pride myself in offering t
 
         </div>
       </section>
+    </article>
+  </main>
+
   
   <!-- 
     - ionicon link
